--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "debug": false,
-  "skip_intro": false,
+  "skip_intro": true,
   "openai_model": "gpt-4-1106-preview",
   "openai_api_key": "",
   "header_name" : "MU/TH/UR",
@@ -31,6 +31,15 @@
       "cronus_cryo_ended": false,
       "cronus_life_support_restored": false,
       "cronus_oxygen_restored": false,
+      "return_to_earth": false,
+      "main_airlock_broken": false,
+      "garage_open": false,
+      "garage_locked": false,
+      "engine_repaired:": false,
+      "comm_repaired:": false,
+      "nav_repaired:": false,
+      "reactor_repaired:": false,
+      "scrubbers_repaired:": false,
       "intro_speed": 0.013
     },
     "cronus_life_support":
@@ -41,6 +50,15 @@
       "cronus_cryo_ended": false,
       "cronus_life_support_restored": false,
       "cronus_oxygen_restored": false,
+      "return_to_earth": false,
+      "main_airlock_broken": false,
+      "garage_open": false,
+      "garage_locked": false,
+      "engine_repaired:": false,
+      "nav_repaired:": false,
+      "comm_repaired:": false,
+      "reactor_repaired:": false,
+      "scrubbers_repaired:": false,
       "cronus_life_support_increase_range": [8, 15],
       "intro_speed": 0.013
     }
