--- a/config.json
+++ b/config.json
@@ -35,11 +35,11 @@
       "main_airlock_broken": false,
       "garage_open": false,
       "garage_locked": false,
-      "engine_repaired:": false,
-      "comm_repaired:": false,
-      "nav_repaired:": false,
-      "reactor_repaired:": false,
-      "scrubbers_repaired:": false,
+      "engine_repaired": false,
+      "comm_repaired": false,
+      "nav_repaired": false,
+      "reactor_repaired": false,
+      "scrubbers_repaired": false,
       "reveal_eev" : false,
       "intro_speed": 0.013
     },
@@ -55,11 +55,11 @@
       "main_airlock_broken": false,
       "garage_open": false,
       "garage_locked": false,
-      "engine_repaired:": false,
-      "nav_repaired:": false,
-      "comm_repaired:": false,
-      "reactor_repaired:": false,
-      "scrubbers_repaired:": false,
+      "engine_repaired": false,
+      "nav_repaired": false,
+      "comm_repaired": false,
+      "reactor_repaired": false,
+      "scrubbers_repaired": false,
       "cronus_life_support_increase_range": [8, 15],
       "intro_speed": 0.013
     }
