Updated Fort Nebraska with new BIOS and tweaked prompt.

--- a/muthur_plugins/fort_nebraska/config.json
+++ b/muthur_plugins/fort_nebraska/config.json
@@ -1,5 +1,6 @@
 {
       "header_name" : "A.P.O.L.L.O.",
+      "intro_speed": 0.02,
       "containment_protocol": true,
-      "intro_speed": 0.02
-    }
+      "power_online": true
+}
